--- a/ruoyi-admin/src/main/resources/templates/code/trustCheck/jdCheck.html
+++ b/ruoyi-admin/src/main/resources/templates/code/trustCheck/jdCheck.html
@@ -77,12 +77,12 @@
             </div>
 
             <div class="btn-group-sm" id="toolbar" role="group">
-                <a class="btn btn-primary single disabled" onclick="$.operate.add()" shiro:hasPermission="code:trust:add">
-                    <i class="fa fa-edd"></i> 批量审核通过
-                </a>
-                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="code:trust:edit">
-                    <i class="fa fa-edit"></i> 批量审核退回
-                </a>
+<!--                <a class="btn btn-primary single disabled" onclick="$.operate.add()" shiro:hasPermission="code:trust:add">-->
+<!--                    <i class="fa fa-edd"></i> 批量审核通过-->
+<!--                </a>-->
+<!--                <a class="btn btn-primary single disabled" onclick="$.operate.edit()" shiro:hasPermission="code:trust:edit">-->
+<!--                    <i class="fa fa-edit"></i> 批量审核退回-->
+<!--                </a>-->
                 <a class="btn btn-warning" onclick="$.table.exportExcel()" shiro:hasPermission="code:trust:export">
                     <i class="fa fa-download"></i> 导出
                 </a>
